Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.9b1 (TBD)
-----------

New features:

* Add support for TIN and triangle geometries (#1163).
* Add an allow_unsupported_drivers option to fiona.open() (#1126).
* Added support for the OGR StringList field type (#1141).

Changes and bug fixes:

* Ensure that ZipMemoryFile have the proper GDAL name after creation so that we
  can use listdir() (#1092).
* The fiona._loading module, which supports DLL loading on Windows,
  has been moved into __init__.py and is no longer used anywhere else (#1168).
* Move project metadata to pyproject.toml (#1165).
* Update drvsupport.py to reflect new format capabilities in GDAL 3.6.0
  (#1122).
* Remove debug logging from env and _env modules.

1.9a3 (2022-10-17)
------------------

Packaging:

* Builds now require Cython >= 0.29.29 because of
* https://github.com/cython/cython/issues/4609 (see #1143).
* PyPI wheels now include GDAL 3.5.2, PROJ 9.0.1, and GEOS 3.11.0.
* PyPI wheels are now available for Python 3.11.

1.9a2 (2022-06-10)
------------------

Deprecations:

- Fiona's API methods will accept feature and geometry dicts in 1.9.0, but this
  usage is deprecated. Instances of Feature and Geometry will be required in
  2.0.
- The precision keyword argument of fiona.transform.transform_geom is
  deprecated and will be removed in version 2.0.
- Deprecated usage has been eliminated in the project. Fiona's tests pass when
  run with a -Werror::DeprecationWarning filter.

Changes:

- Fiona's FionaDeprecationWarning now sub-classes DeprecationWarning.
- Some test modules have beeen re-formatted using black.

New features:

- Fiona Collections now carry a context exit stack into which we can push fiona
  Envs and MemoryFiles (#1059).
- Fiona has a new CRS class, like rasterio's, which is compatible with the CRS
  dicts of previous versions (#714).

1.9a1 (2022-05-19)
------------------

Deprecations:
